<?xml version="1.0" encoding="utf-8"?>
<!-- IP配置 -->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Spinner
        android:id="@+id/spIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:entries="@array/ip_entry"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_divider_outer"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/prlStaticIp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:visibility="gone">

        <TextView
            style="@style/DetailItemTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etIpAddress"
            android:layout_alignTop="@+id/etIpAddress"
            android:layout_toLeftOf="@+id/etIpAddress"
            android:layout_toStartOf="@+id/etIpAddress"
            android:text="@string/detail_ip_ip_address"/>

        <EditText
            android:id="@+id/etIpAddress"
            style="@style/DetailItemEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

        <TextView
            style="@style/DetailItemTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etGateway"
            android:layout_alignTop="@+id/etGateway"
            android:layout_toLeftOf="@+id/etGateway"
            android:layout_toStartOf="@+id/etGateway"
            android:text="@string/detail_ip_gateway"/>

        <EditText
            android:id="@+id/etGateway"
            style="@style/DetailItemEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etIpAddress"/>

        <TextView
            style="@style/DetailItemTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etPrefixLength"
            android:layout_alignTop="@+id/etPrefixLength"
            android:layout_toLeftOf="@+id/etPrefixLength"
            android:layout_toStartOf="@+id/etPrefixLength"
            android:text="@string/detail_ip_prefix_length"/>

        <EditText
            android:id="@+id/etPrefixLength"
            style="@style/DetailItemEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etGateway"/>

        <TextView
            style="@style/DetailItemTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etDns1"
            android:layout_alignTop="@+id/etDns1"
            android:layout_toLeftOf="@+id/etDns1"
            android:layout_toStartOf="@+id/etDns1"
            android:text="@string/detail_ip_dns1"/>

        <EditText
            android:id="@+id/etDns1"
            style="@style/DetailItemEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etPrefixLength"/>

        <TextView
            style="@style/DetailItemTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etDns2"
            android:layout_alignTop="@+id/etDns2"
            android:layout_toLeftOf="@+id/etDns2"
            android:layout_toStartOf="@+id/etDns2"
            android:text="@string/detail_ip_dns2"/>

        <EditText
            android:id="@+id/etDns2"
            style="@style/DetailItemEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etDns1"/>
    </android.support.percent.PercentRelativeLayout>
</merge>